<resources>
    <string name="app_name">Assist By Scan</string>
    <string name="settings">Settings</string>
    <string name="back">return</string>
    <string name="hello">H E L L O !</string>
    <string name="Hello">Simplify the repair of your software with our dedicated application, designed to optimize and restore software developed by our company.</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_login">Welcome back! Glad to see you, Again!</string>
    <string name="username_or_email">Username Or Email</string>
    <string name="password">Password</string>
    <string name="icon">icon</string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="welcome_admin">Welcome admin</string>
    <string name="welcome_user">Welcome user</string>
    <string name="camera_perm">Please give access to your Camera so that we can scan and provide you with what is inside the code.</string>
    <string name="chatbot">Chatbot</string>
    <string name="welcome">W E L C O M E !</string>
    <string name="WELCOME">By answering our questions, you help us accelerate the resolution of your issues and ensure a technician is sent as quickly as possible.</string>
    <string name="Continue">Continue</string>
    <string name="remember_pass">Did you remember your password? Login</string>
    <string name="forget_message">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="forget_phone_message">Don\'t worry! It occurs. Please enter the phone number linked with your account.</string>

    <string name="hello_register">Hello! Register to get started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_email_address">Enter the verification code we just sent on your email address.</string>
    <string name="resend">Didn\'t receive the code? Resend</string>
    <string name="thank_you_message">Thank you for answering all the questions!</string>
    <string name="api_error">API response error</string>
    <string name="connection_error">Connection error</string>
    <string name="profile">Profile</string>
    <string name="change_number">Change number</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="change_username">Change username</string>
    <string name="delete_account">Delete account</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="language">Language</string>
    <string name="appointment">Appointment</string>
    <string name="please_enter_email">Username or email required!</string>
    <string name="otp_sent">OTP sent</string>
    <string name="request_failed">request failed</string>
    <string name="error">error</string>
    <string name="invalid_email_format">invalid format</string>
    <string name="user_not_found">User not found</string>

    <string name="country_code_picker_description">Select your country code</string>
    <string name="continue_to_login">Continue to login</string>
    <string name="new_username">New username</string>
    <string name="new_email">New email</string>
    <string name="new_number">New number</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="create_new_password">Create new password</string>
    <string name="create_pass_message">Your new password must be unique from those previously used.</string>

    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
    <string name="password_changed">Password changed</string>
    <string name="password_changed_successfully">Your password has been successfully changed.</string>
    <string name="registration_failed">Registration failure</string>
    <string name="server_error">Server error</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="email_missing">email missing\n</string>
    <string name="describe_exact_problem">description supplémentaire et exacte de la probleme </string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="send">send</string>
    <string name="request_sent">Request sent</string>
    <string name="missing_repair_id">ID de réparation manquant</string>
    <string name="load_error_fmt">Loading error: %1$s</string>
    <string name="request_message_sent">Your request has been sent, you can check the date of arrival of our technicians in your history, thank you</string>
    <string name="show_history">View history</string>
    <string name="success">Success</string>
    <string name="qr_code_scan">Qr code Scanner</string>
    <string name="http_error">Http error</string>
    <string name="unexpected_response">Unexpected response</string>
    <string name="failed">Failed</string>
    <string name="return_to_login">Return to login</string>
    <string name="error_invalid_otp">error invalid otp</string>
    <string name="current_email">Current email</string>
    <string name="flashlight">"Flash button "</string>
    <string name="location">Location</string>
    <string name="add_qrcode">Active Qr code</string>
    <string name="history">History</string>
    <string name="details">Details</string>
    <string name="close_application">Close application</string>
    <string name="data_not_found">data not found</string>
    <string name="help_center">Help center</string>
    <string name="qr_code_history">Qrcode history</string>
    <string name="qr_code_details">Qrcode details</string>
    <string name="intervention">Intervention report...</string>
    <string name="repair">"Repair"</string>
    <string name="newInt">New intervention</string>
    <string name="country">Country</string>
    <string name="zone">Zone</string>
    <string name="street">Street</string>
    <string name="exact_location">Exact location</string>
    <string name="reset_password">Reset password</string>
    <string name="check_your_email">Please check your email to verify your account.</string>
    <string name="verification_token">Verification token</string>
    <string name="verify">Verify</string>
    <string name="resend_link">Resend verification link</string>
    <string name="token_required">Token required</string>
    <string name="verify_email_title">Email verification</string>
    <string name="check_your_email_title">Check your email</string>
    <string name="check_your_email_message">We’ve sent a verification link to your email address. Please open your mail app to confirm your account.</string>
    <string name="open_email_app">Open my email app</string>
    <string name="email_verified_title">Email verified</string>
    <string name="email_verified_content">Your email has been verified. You can sign in now.</string>
    <string name="token_missing">token missing</string>
    <string name="unknown_deeplink_path">unknown deeplink path</string>
    <string name="fill_required_fields">fill required fields</string>
    <!-- res/values/strings.xml -->
    <string name="email_changed_title">Success 🎉</string>
    <string name="email_changed_success">Your e-mail address has been successfully changed.</string>
    <string name="account_deleted_title">Account deleted</string>
    <string name="account_deleted_success">Your account has been deleted.</string>
    <string name="done">Done</string>
    <string name="activate_qr_code">Activate qr code</string>
    <string name="all_fields_required">All fields requireds</string>

    <string name="user">Utilisateur</string>
    <string name="date">Date</string>
    <string name="comment">Commentaire</string>
    <string name="status">Statut</string>
    <!-- Etats / erreurs -->
    <string name="no_tech_available">Aucun technicien disponible pour le moment.</string>
    <string name="no_tech_this_slot">Aucun technicien disponible à ce créneau.</string>
    <string name="booking_error">Erreur lors de la réservation.</string>
    <string name="save">Save</string>
    <string name="qr_id">Qr id</string>
    <string name="request_intervention">Request intervention</string>
    <string name="direct_intervention_title">New direct intervention request</string>
    <string name="direct_intervention_body">QR: %1$s\\nComment: %2$s</string>
    <string name="choose_methode">Please choose the method you want to use to request the intervention</string>
    <string name="intervention_direct">Intervention direct</string>
    <string name="intervention_by_appointment">Intervention by appointment</string>

    <string name="loading_error">Loading error</string>
    <string name="HelloCompany">Please enter your company name</string>
    <string name="company">Company</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_message">Please connect to the internet and relance l\'app again.</string>
    <string name="saved_success_you_can_login">you can connect now</string>
    <string name="camera_permission_required">You must give your camera permission to continue.</string>
    <string name="daily_intervention">Daily intervention</string>
    <string name="error_generic">generic error.</string>
    <string name="no_repairs_today">There are no interventions planned for today.</string>
    <string name="error_missing_username">Missing username.</string>
    <string name="next">Next</string>
    <string name="create_report">Create report</string>
    <string name="report_for_id">Create report for ID #%1$s</string>
    <string name="problem_type">Problem type</string>

    <string name="report_title">Report</string>
    <string name="report_answer_hint">Write your answer here</string>
    <string name="type_your_answer">Type your answer...</string>
    <string name="no_reports_found">No reports found.</string>
    <string name="no_reports_recorded_at_this_time">No reports recorded at this time</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="check_questions">✓</string>
    <string name="see_report">See report</string>
    <string name="serial_number">Serial number</string>
    <string name="print_pdf">Print PDF</string>
    <string name="finish">Finish</string>
    <string name="camera_scanner">Camera scanner</string>
    <string name="regular_report">Regular report</string>
    <string name="need_help">Need help</string>
    <string name="repair_history">Repair history</string>
    <string name="logout">Logout</string>


</resources>