<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.SignUpActivity">

    <!-- Toolbar -->
    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- IMPORTANT : NestedScrollView + clipToPadding=false -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Ton contenu existant -->
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/hello_register"
                style="@style/CustomTextView"
                android:layout_marginBottom="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <!-- Username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/username"
                    android:drawableEnd="@drawable/baseline_group_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/baseline_mail_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Country Code Picker -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CodeInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:background="@drawable/border_country_code"
                    android:contentDescription="@string/country_code_picker_description"
                    app:ccp_contentColor="?attr/colorOnSurface"
                    app:ccp_defaultNameCode="FR"
                    app:ccp_showFlag="true"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:drawableEnd="@drawable/baseline_local_phone_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/address"
                    android:drawableEnd="@drawable/baseline_home_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- City -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/city"
                    android:drawableEnd="@drawable/baseline_location_city_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Postal Code -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCodeInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCode"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/postal_code"
                    android:inputType="number"
                    android:drawableEnd="@drawable/baseline_room_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                style="@style/CustomTextInputLayout"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordInputLayout"
                android:layout_width="match_parent"
                android:layout_marginBottom="24dp"
                style="@style/CustomTextInputLayout"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    style="@style/CustomTextInputEditText"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign Up Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyCustomButtonBlue"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/sign_up" />

            <!-- Login Link (doit rester visible) -->
            <TextView
                android:id="@+id/loginLink"
                style="@style/CustomClickableTextView"
                android:text="@string/already_have_an_account_login"
                android:contentDescription="@string/login" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
